# algoscope

./: .gitignore  README.md  SETUP.md  google_swe_lcs.html  google_swe_max_subarray.html  google_swe_two_sum.html  install.sh  pyproject.toml  report.html  report_knapsack.html  report_knapsack_grid.html  requirements-dev.txt  requirements-minimal.txt  requirements.txt  sorting_comparison.html
examples/: binary_search_example.py  compare_knapsack.py  compare_linear_vs_binary.py  compare_sorting_algo.py  google_swe_interview_prep.py  quick_interview_prep.py  report.html  report_knapsack.html  sorting_comparison.py
examples/json_result/: results.json
examples/reports/: report.html  report_knapsack_grid.html
json_result/: results.json
src/algoscope/: __init__.py  analyze.py  complexity.py  io.py  memory.py  plotting.py  report.py  utils.py
src/algoscope/templates/: report.html.j2
tests/: test_api.py
