[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algoscope"
version = "0.1.0"
description = "Analyze algorithm time/space complexity with empirical benchmarks and a single self-contained HTML report."
readme = "README.md"
authors = [{name="Prakash", email="prakash.rabidas2@gmail.com"}]
#license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "jinja2>=3.1.2",
  "plotly>=5.22.0",
  "numpy>=1.23.0",
]

[project.optional-dependencies]
mem = ["memory-profiler>=0.61.0", "psutil>=5.9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"algoscope" = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","UP","B","N","S","W"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
